--- a/README.rdoc
+++ b/README.rdoc
@@ -3,8 +3,7 @@
 This theme provide a modern override of default bootstrap 3 rails_admin theme.
 Its provides news colors, adjustments and a brand new tree view menu.
 
-![DASHBOARD]
-(http://i.imgur.com/Mtsr0l4.png)
+![DASHBOARD](http://i.imgur.com/Mtsr0l4.png)
 
 Like we can't include custom js in a bundled theme with raild_admin for now, so, you have to add in your `app/assets/javascripts/rails_admin/custom/ui.js` the following code :
 It will make the javascript menu works.
